--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
@@ -7,46 +7,67 @@
 </head>
 
 <body>
-<header> The Story of the Chinese Farmer </header>
 
-<time> 11/05/2016 <address> Alexandre Gorius </address> </time>
+<header> <h1>The Story of the Chinese Farmer </h1></header>
 
-<img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="alexandre">
+<h3> <time> 11/05/2016 <address> Alexandre Gorius </address> </time> </h3>
 
-<section>Preamble</section>
+<img src="alexandre.jpeg" alt="alexandre">
+
+
+<section>Preamble
 
 <ul>
     <li>read this once</li>
     <li>then read it again</li>
     <li>then tell it to your best friend</li>
 </ul>
+</section>
 
-<header> The Story </header>
+<header> <h2>The Story </h2> </header>
 
-<p>Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, “We are so sorry to hear your horse has run away. This is most unfortunate.” The farmer said, “Maybe.” The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, “Oh, isn’t that lucky. What a great turn of events. You now have eight horses!” The farmer again said, “Maybe.”
+<p>Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate.</p>
 
-    The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said, “Oh dear, that’s too bad,” and the farmer responded, “Maybe.” The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, “Isn’t that great!” Again, he said, “Maybe.”
+<p>They said, <cite> “We are so sorry to hear your horse has run away. This is most unfortunate.” </cite></p>
+<p>The farmer said: <cite>“Maybe.” </cite></p>
+<p>The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said:</p>
+<p><cite>“Oh, isn’t that lucky. What a great turn of events. You now have eight horses!”</cite></p>
+<p>The farmer again said, <cite>“Maybe.”</cite></p>
+<p>The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said:</p>
 
-    The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is good or bad — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of good fortune.
+<p> <cite>“Oh dear, that’s too bad,” </cite> </p> and the farmer responded:
 
-    Alan Watts</p>
+<p> <cite> “Maybe.” </cite> </p>
+    <p>The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said:</p>
+
+<p> <cite> “Isn’t that great!”</cite> </p>
+
+<p>Again, he said, <cite> “Maybe.”</cite> </p>
+
+    <p>The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is good or bad — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of good fortune.</p>
 
 <address> Alan Watts</address>
-
+<br>
 <table>
     <tr>
-        <th>Event</th>
-        <th>Lose a Horse</th>
-        <th>Win more horses</th>
-        <th>Son injury</th>
-        <th>Avoid war</th>
+        <th> Event </th>
+        <th>Good or bad?</th>
+    </tr>
+
+    <tr>
+        <td>Lose a horse</td>
+        <td><em>Maybe</em></td>
     </tr>
     <tr>
-        <td>Good or bad?</td>
-        <td>Maybe</td>
-        <td>Maybe</td>
-        <td>Maybe</td>
-        <td>Maybe</td>
+        <td>Win more horses</td>
+        <td><em>Maybe</em></td>
+    </tr>
+    <tr>
+        <td>Son injury</td>
+        <td><em>Maybe</em></td>
+    <tr>
+        <td>Avoid war</td>
+    <td><em>Maybe</em></td>
     </tr>
     </table>
 <br>
@@ -54,9 +75,9 @@
 <p>Good and Bad are just one perspective. Bananas are good for monkeys, but monkeys are not good for bananas. Let's not make a big deal out of it...
 </p>
 
-
-<p> Copyright Just Another Company 2017. All right reserved. Adapted from this article: <a href="https://wellsbaum.blog/alan-watts-story-of-the-chinese-farmer/" target="_blank" rel="noopener noreferrer"></a></p>
-
+<footer>
+<p> Copyright Just Another Company 2017. All right reserved. Adapted from this article: <a href="https://wellsbaum.blog/alan-watts-story-of-the-chinese-farmer/" target="_blank" rel="noopener noreferrer"> CHECK THE STORY </a></p>
+</footer>
 
 </body>
 </html>
